# fast-api-lms

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 67a762cba3a0_moving_is_active_to_user_table.py  943929dcd1d6_.py
api/: users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user.py
